@@ -1,8 +1,34 @@
 package rwilk.exploreenglish.controller.word;
 
+import static org.apache.commons.lang3.StringUtils.isAnyBlank;
+import static org.apache.commons.lang3.StringUtils.isBlank;
+import static org.apache.commons.lang3.StringUtils.trimToEmpty;
+
+import static rwilk.exploreenglish.exception.ExceptionControllerAdvice.NOT_FOUND_WORD_INSTANCE;
+import static rwilk.exploreenglish.exception.ExceptionControllerAdvice.NOT_FOUND_WORD_SOUND_INSTANCE;
+
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.ResourceBundle;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
+
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.ListUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.CommandLineRunner;
+import org.springframework.stereotype.Controller;
+
+import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
+
 import javafx.application.Platform;
 import javafx.collections.FXCollections;
-import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.control.ComboBox;
@@ -11,85 +37,54 @@ import javafx.scene.control.ListView;
 import javafx.scene.control.TextField;
 import javafx.scene.control.ToggleButton;
 import javafx.scene.control.ToggleGroup;
-import lombok.Getter;
-import lombok.extern.slf4j.Slf4j;
-
-import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.collections4.ListUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.stereotype.Controller;
+import javafx.scene.input.Clipboard;
+import javafx.scene.input.ClipboardContent;
+import javafx.scene.input.MouseEvent;
 import rwilk.exploreenglish.custom.ToggleGroup2;
 import rwilk.exploreenglish.exception.RequiredFieldsAreEmptyException;
 import rwilk.exploreenglish.exception.RequiredObjectNotFoundException;
 import rwilk.exploreenglish.model.WordTypeEnum;
-import rwilk.exploreenglish.model.entity.Course;
-import rwilk.exploreenglish.model.entity.Exercise;
-import rwilk.exploreenglish.model.entity.ExerciseItem;
 import rwilk.exploreenglish.model.entity.Lesson;
 import rwilk.exploreenglish.model.entity.LessonWord;
-import rwilk.exploreenglish.model.entity.Note;
-import rwilk.exploreenglish.model.entity.Sentence;
-import rwilk.exploreenglish.model.entity.release.ReleaseCourse;
-import rwilk.exploreenglish.model.entity.release.ReleaseExercise;
-import rwilk.exploreenglish.model.entity.release.ReleaseExerciseRow;
-import rwilk.exploreenglish.model.entity.release.ReleaseLesson;
-import rwilk.exploreenglish.model.entity.release.ReleaseNote;
-import rwilk.exploreenglish.model.entity.release.ReleaseSentence;
-import rwilk.exploreenglish.model.entity.release.ReleaseWord;
 import rwilk.exploreenglish.model.entity.Term;
 import rwilk.exploreenglish.model.entity.Word;
-import rwilk.exploreenglish.model.entity.WordSound;
-import rwilk.exploreenglish.repository.CourseRepository;
-import rwilk.exploreenglish.repository.ExerciseItemRepository;
-import rwilk.exploreenglish.repository.ExerciseRepository;
+import rwilk.exploreenglish.model.entity.Definition;
+import rwilk.exploreenglish.model.entity.release.ReleaseSentence;
+import rwilk.exploreenglish.model.entity.release.ReleaseWord;
 import rwilk.exploreenglish.repository.LessonRepository;
 import rwilk.exploreenglish.repository.LessonWordRepository;
-import rwilk.exploreenglish.repository.NoteRepository;
 import rwilk.exploreenglish.repository.WordRepository;
-import rwilk.exploreenglish.repository.WordSoundRepository;
-import rwilk.exploreenglish.repository.release.ReleaseCourseRepository;
-import rwilk.exploreenglish.repository.release.ReleaseExerciseRepository;
-import rwilk.exploreenglish.repository.release.ReleaseExerciseRowRepository;
-import rwilk.exploreenglish.repository.release.ReleaseLessonRepository;
-import rwilk.exploreenglish.repository.release.ReleaseNoteRepository;
+import rwilk.exploreenglish.repository.DefinitionRepository;
 import rwilk.exploreenglish.repository.release.ReleaseSentenceRepository;
 import rwilk.exploreenglish.repository.release.ReleaseWordRepository;
+import rwilk.exploreenglish.scrapper.longman.LongmanScrapper;
+import rwilk.exploreenglish.service.LessonWordService;
+import rwilk.exploreenglish.service.WordService;
+import rwilk.exploreenglish.service.DefinitionService;
 import rwilk.exploreenglish.utils.FormUtils;
 import rwilk.exploreenglish.utils.SoundUtils;
 import rwilk.exploreenglish.utils.WordUtils;
 
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
-import java.util.ResourceBundle;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
-
-import static org.apache.commons.lang3.StringUtils.isAnyBlank;
-import static org.apache.commons.lang3.StringUtils.isBlank;
-import static org.apache.commons.lang3.StringUtils.trimToEmpty;
-import static rwilk.exploreenglish.exception.ExceptionControllerAdvice.*;
-
 @Slf4j
 @Controller
-public class WordFormController implements Initializable {
+public class WordFormController implements Initializable, CommandLineRunner {
 
   private WordController wordController;
+  @Autowired
+  private LongmanScrapper longmanScrapper;
   private final List<Object> controls = new ArrayList<>();
 
   @FXML private TextField textFieldId;
   @Getter @FXML private ComboBox<Lesson> comboBoxLesson;
   @FXML private ListView<Lesson> listViewLessons;
   @FXML private TextField textFieldEnglishNames;
-  @FXML private TextField textFieldWordSoundId;
-  @FXML private TextField  textFieldEnglishName;
-  @FXML private TextField  textFieldAdditionalInformation;
-  @FXML private ComboBox<WordTypeEnum> comboBoxWordType;
-  @FXML private TextField  textFieldAmericanSound;
-  @FXML private TextField textFieldBritishSound;
-  @FXML private ListView<WordSound> listViewWordVariants;
+  @Getter @FXML private TextField textFieldWordSoundId;
+  @Getter @FXML private TextField  textFieldEnglishName;
+  @Getter @FXML private TextField  textFieldAdditionalInformation;
+  @Getter @FXML private ComboBox<WordTypeEnum> comboBoxWordType;
+  @Getter @FXML private TextField  textFieldAmericanSound;
+  @Getter @FXML private TextField textFieldBritishSound;
+  @FXML private ListView<Definition> listViewWordVariants;
   @Getter @FXML private TextField textFieldPolishName;
   @FXML private ToggleButton toggleButtonNoun;
   @FXML private ToggleButton toggleButtonVerb;
@@ -98,6 +93,9 @@ public class WordFormController implements Initializable {
   @FXML private ToggleButton toggleButtonPhrasalVerb;
   @FXML private ToggleButton toggleButtonSentence;
   @FXML private ToggleButton toggleButtonIdiom;
+  @FXML private ToggleButton toggleButtonNumber;
+  @FXML private ToggleButton toggleButtonPronoun;
+  @FXML private ToggleButton toggleButtonDeterminer;
   @FXML private ToggleButton toggleButtonOther;
   @FXML private ToggleButton toggleButtonA;
   @FXML private ToggleButton toggleButtonAn;
@@ -129,7 +127,7 @@ public class WordFormController implements Initializable {
 
     listViewWordVariants.setCellFactory(lv -> new ListCell<>() {
       @Override
-      protected void updateItem(WordSound item, boolean empty) {
+      protected void updateItem(Definition item, boolean empty) {
         super.updateItem(item, empty);
         if (item != null && WordTypeEnum.WORD == WordTypeEnum.valueOf(item.getType())) {
           this.setText(item.toString());
@@ -182,9 +180,9 @@ public class WordFormController implements Initializable {
   public void buttonEditOnAction() {
     wordController.getWordService().getById(Long.valueOf(textFieldId.getText()))
         .ifPresent(word -> {
-          word.setEnglishNames(listViewWordVariants.getItems().stream()
-                                   .filter(Objects::nonNull)
-                                   .toList());
+          word.setDefinitions(listViewWordVariants.getItems().stream()
+                                                  .filter(Objects::nonNull)
+                                                  .toList());
           word.setPolishName(trimToEmpty(textFieldPolishName.getText()));
           word.setPartOfSpeech(trimToEmpty(getSelectedToggleText(toggleGroupPartOfSpeech)));
           word.setArticle(trimToEmpty(getSelectedToggleText(toggleGroupArticle)));
@@ -202,7 +200,7 @@ public class WordFormController implements Initializable {
   public void buttonAddOnAction() {
       Word word = Word.builder()
           .id(null)
-          .englishNames(ListUtils.emptyIfNull(listViewWordVariants.getItems()).stream()
+          .definitions(ListUtils.emptyIfNull(listViewWordVariants.getItems()).stream()
                                     .filter(Objects::nonNull)
                                     .toList())
           .polishName(trimToEmpty(textFieldPolishName.getText()))
@@ -232,7 +230,7 @@ public class WordFormController implements Initializable {
   public void setWordForm(final Word word) {
     textFieldId.setText(trimToEmpty(word.getId().toString()));
     setLessonWordForm();
-    setWordForm(word.getPolishName(), word.getEnglishNames());
+    setWordForm(word.getPolishName(), word.getDefinitions());
 
     toggleGroupPartOfSpeech.selectToggle(toggleGroupPartOfSpeech.getToggles().stream()
         .filter(toggle -> toggle.getUserData().toString().equals(trimToEmpty(word.getPartOfSpeech())))
@@ -289,19 +287,19 @@ public class WordFormController implements Initializable {
       englishNames = englishNames.substring(englishNames.indexOf(" "));
     }
 
-    final List<WordSound> wordSounds = new ArrayList<>(wordSoundFromTerm(WordTypeEnum.WORD, englishNames));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.COMPARATIVE, term.getComparative())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SUPERLATIVE, term.getSuperlative())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_TENSE, term.getPastTense())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_PARTICIPLE, term.getPastParticiple())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PLURAL, term.getPlural())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SYNONYM, term.getSynonym())));
+    final List<Definition> definitions = new ArrayList<>(wordSoundFromTerm(WordTypeEnum.WORD, englishNames));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.COMPARATIVE, term.getComparative())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SUPERLATIVE, term.getSuperlative())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_TENSE, term.getPastTense())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_PARTICIPLE, term.getPastParticiple())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PLURAL, term.getPlural())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SYNONYM, term.getSynonym())));
 
     listViewLessons.setItems(null);
-    setWordForm(term.getPolishName(), wordSounds);
+    setWordForm(term.getPolishName(), definitions);
   }
 
-  private List<WordSound> wordSoundFromTerm(final WordTypeEnum type, final String value) {
+  private List<Definition> wordSoundFromTerm(final WordTypeEnum type, final String value) {
     if (StringUtils.isBlank(value)) {
       return List.of();
     }
@@ -315,16 +313,16 @@ public class WordFormController implements Initializable {
             additional = enName.substring(enName.indexOf("(") + 1, enName.indexOf(")"));
             enName = enName.substring(0, enName.indexOf("("));
           }
-          return WordSound.builder()
-              .englishName(enName)
-              .additionalInformation(additional)
-              .type(type.toString())
-              .build();
+          return Definition.builder()
+                           .englishName(enName)
+                           .additionalInformation(additional)
+                           .type(type.toString())
+                           .build();
         })
         .toList();
   }
 
-  private List<WordSound> wordSoundFromTerm(final WordTypeEnum type, final String value, final String sound) {
+  private List<Definition> wordSoundFromTerm(final WordTypeEnum type, final String value, final String sound) {
     if (StringUtils.isBlank(value)) {
       return List.of();
     }
@@ -338,24 +336,24 @@ public class WordFormController implements Initializable {
                      additional = enName.substring(enName.indexOf("(") + 1, enName.indexOf(")"));
                      enName = enName.substring(0, enName.indexOf("("));
                    }
-                   return WordSound.builder()
-                                   .englishName(enName)
-                                   .additionalInformation(additional)
-                                   .type(type.toString())
-                                   .britishSound(sound)
-                                   .build();
+                   return Definition.builder()
+                                    .englishName(enName)
+                                    .additionalInformation(additional)
+                                    .type(type.toString())
+                                    .britishSound(sound)
+                                    .build();
                  })
                  .toList();
   }
 
-  private void setWordForm(final String polishName, final List<WordSound> wordSounds) {
+  private void setWordForm(final String polishName, final List<Definition> definitions) {
     textFieldPolishName.setText(trimToEmpty(polishName));
-    listViewWordVariants.setItems(FXCollections.observableArrayList(wordSounds));
-    if (!CollectionUtils.isEmpty(wordSounds)) {
-      wordSounds.stream()
-                .filter(wordSound -> wordSound.getType().equals(WordTypeEnum.WORD.toString()))
-                .findFirst()
-                .ifPresent(this::setWordSoundForm);
+    listViewWordVariants.setItems(FXCollections.observableArrayList(definitions));
+    if (!CollectionUtils.isEmpty(definitions)) {
+      definitions.stream()
+                 .filter(wordSound -> wordSound.getType().equals(WordTypeEnum.WORD.toString()))
+                 .findFirst()
+                 .ifPresent(this::setWordSoundForm);
     } else {
       buttonClearWordSoundOnAction();
     }
@@ -429,7 +427,7 @@ public class WordFormController implements Initializable {
   }
 
   public void listViewWordVariantsOnMouseClicked() {
-    final WordSound selectedItem = listViewWordVariants.getSelectionModel().getSelectedItem();
+    final Definition selectedItem = listViewWordVariants.getSelectionModel().getSelectedItem();
     if (selectedItem != null) {
       setWordSoundForm(selectedItem);
     }
@@ -456,11 +454,11 @@ public class WordFormController implements Initializable {
     if (isBlank(textFieldWordSoundId.getText())) {
       throw new RequiredFieldsAreEmptyException("Cannot delete WORD_SOUND due to empty required fields.");
     }
-    final WordSound wordSound = getWordSoundById();
+    final Definition definition = getWordSoundById();
 
-    wordController.getWordSoundService().delete(wordSound);
+    wordController.getDefinitionService().delete(definition);
 
-    refreshListViewWordVariants(wordSound.getWord().getId());
+    refreshListViewWordVariants(definition.getWord().getId());
     wordController.refreshTableView();
     wordController.refreshChildComboBoxes();
   }
@@ -471,14 +469,14 @@ public class WordFormController implements Initializable {
       throw new RequiredFieldsAreEmptyException("Cannot edit WORD_SOUND due to empty required fields.");
     }
 
-    final WordSound wordSound = getWordSoundById();
-    wordSound.setEnglishName(trimToEmpty(textFieldEnglishName.getText()));
-    wordSound.setAdditionalInformation(trimToEmpty(textFieldAdditionalInformation.getText()));
-    wordSound.setType(comboBoxWordType.getSelectionModel().getSelectedItem().toString());
-    wordSound.setAmericanSound(trimToEmpty(textFieldAmericanSound.getText()));
-    wordSound.setBritishSound(trimToEmpty(textFieldBritishSound.getText()));
+    final Definition definition = getWordSoundById();
+    definition.setEnglishName(trimToEmpty(textFieldEnglishName.getText()));
+    definition.setAdditionalInformation(trimToEmpty(textFieldAdditionalInformation.getText()));
+    definition.setType(comboBoxWordType.getSelectionModel().getSelectedItem().toString());
+    definition.setAmericanSound(trimToEmpty(textFieldAmericanSound.getText()));
+    definition.setBritishSound(trimToEmpty(textFieldBritishSound.getText()));
 
-    final WordSound updated = wordController.getWordSoundService().save(wordSound);
+    final Definition updated = wordController.getDefinitionService().save(definition);
 
     setWordSoundForm(updated);
     refreshListViewWordVariants(updated.getWord().getId());
@@ -493,29 +491,29 @@ public class WordFormController implements Initializable {
     } else if (isBlank(textFieldId.getText())) {
       buttonAddOnAction();
     }
-    final List<WordSound> wordSounds = ListUtils.emptyIfNull(listViewWordVariants.getItems());
+    final List<Definition> definitions = ListUtils.emptyIfNull(listViewWordVariants.getItems());
 
     final Word word = getWordById();
-    final WordSound wordSound = WordSound.builder()
-        .id(null)
-        .englishName(trimToEmpty(textFieldEnglishName.getText()))
-        .additionalInformation(trimToEmpty(textFieldAdditionalInformation.getText()))
-        .type(comboBoxWordType.getSelectionModel().getSelectedItem().toString())
-        .americanSound(trimToEmpty(textFieldAmericanSound.getText()))
-        .britishSound(trimToEmpty(textFieldBritishSound.getText()))
-        .word(word)
-        .build();
+    final Definition definition = Definition.builder()
+                                            .id(null)
+                                            .englishName(trimToEmpty(textFieldEnglishName.getText()))
+                                            .additionalInformation(trimToEmpty(textFieldAdditionalInformation.getText()))
+                                            .type(comboBoxWordType.getSelectionModel().getSelectedItem().toString())
+                                            .americanSound(trimToEmpty(textFieldAmericanSound.getText()))
+                                            .britishSound(trimToEmpty(textFieldBritishSound.getText()))
+                                            .word(word)
+                                            .build();
 
-    final WordSound updated = wordController.getWordSoundService().save(wordSound);
+    final Definition updated = wordController.getDefinitionService().save(definition);
 
     setWordSoundForm(updated);
     refreshListViewWordVariants(updated.getWord().getId());
 
     // add WordSounds removed by refresh
-    final List<WordSound> actualWordSounds = ListUtils.emptyIfNull(listViewWordVariants.getItems());
-    if (wordSounds.size() > actualWordSounds.size()) {
-      wordSounds.forEach(ws -> {
-        if (actualWordSounds.stream().noneMatch(aws -> aws.getEnglishName().equals(ws.getEnglishName()) && aws.getType().equals(ws.getType()))) {
+    final List<Definition> actualDefinitions = ListUtils.emptyIfNull(listViewWordVariants.getItems());
+    if (definitions.size() > actualDefinitions.size()) {
+      definitions.forEach(ws -> {
+        if (actualDefinitions.stream().noneMatch(aws -> aws.getEnglishName().equals(ws.getEnglishName()) && aws.getType().equals(ws.getType()))) {
           listViewWordVariants.getItems().add(ws);
         }
       });
@@ -554,24 +552,24 @@ public class WordFormController implements Initializable {
         .orElseThrow(() -> new RequiredObjectNotFoundException(NOT_FOUND_WORD_INSTANCE));
   }
 
-  private WordSound getWordSoundById() {
-    return wordController.getWordSoundService().getById(Long.valueOf(textFieldWordSoundId.getText()))
-        .orElseThrow(() -> new RequiredObjectNotFoundException(NOT_FOUND_WORD_SOUND_INSTANCE));
+  private Definition getWordSoundById() {
+    return wordController.getDefinitionService().getById(Long.valueOf(textFieldWordSoundId.getText()))
+                         .orElseThrow(() -> new RequiredObjectNotFoundException(NOT_FOUND_WORD_SOUND_INSTANCE));
   }
 
   private void refreshListViewWordVariants(final Long wordId) {
-    final List<WordSound> wordSounds = wordController.getWordSoundService()
-        .getAllByWordId(wordId);
-    listViewWordVariants.setItems(FXCollections.observableArrayList(wordSounds));
+    final List<Definition> definitions = wordController.getDefinitionService()
+                                                       .getAllByWordId(wordId);
+    listViewWordVariants.setItems(FXCollections.observableArrayList(definitions));
   }
 
-  private void setWordSoundForm(final WordSound wordSound) {
-    textFieldWordSoundId.setText(String.valueOf(wordSound.getId()));
-    textFieldEnglishName.setText(wordSound.getEnglishName());
-    textFieldAdditionalInformation.setText(wordSound.getAdditionalInformation());
-    comboBoxWordType.getSelectionModel().select(WordTypeEnum.valueOf(wordSound.getType()));
-    textFieldAmericanSound.setText(wordSound.getAmericanSound());
-    textFieldBritishSound.setText(wordSound.getBritishSound());
+  private void setWordSoundForm(final Definition definition) {
+    textFieldWordSoundId.setText(String.valueOf(definition.getId()));
+    textFieldEnglishName.setText(definition.getEnglishName());
+    textFieldAdditionalInformation.setText(definition.getAdditionalInformation());
+    comboBoxWordType.getSelectionModel().select(WordTypeEnum.valueOf(definition.getType()));
+    textFieldAmericanSound.setText(definition.getAmericanSound());
+    textFieldBritishSound.setText(definition.getBritishSound());
   }
 
   private void setLessonWordForm() {
@@ -589,8 +587,10 @@ public class WordFormController implements Initializable {
 
   private void setToggleGroups() {
     toggleGroupPartOfSpeech = new ToggleGroup2("toggleGroupPartOfSpeech");
-    setToggleGroup(Arrays.asList(toggleButtonNoun, toggleButtonVerb, toggleButtonAdjective, toggleButtonAdverb,
-                                 toggleButtonPhrasalVerb, toggleButtonSentence, toggleButtonIdiom, toggleButtonOther), toggleGroupPartOfSpeech);
+    setToggleGroup(List.of(toggleButtonNoun, toggleButtonVerb, toggleButtonAdjective, toggleButtonAdverb,
+                           toggleButtonPhrasalVerb, toggleButtonSentence, toggleButtonIdiom, toggleButtonNumber,
+                           toggleButtonPronoun, toggleButtonDeterminer, toggleButtonOther),
+                   toggleGroupPartOfSpeech);
 
     toggleGroupArticle = new ToggleGroup2("toggleGroupArticle");
     setToggleGroup(Arrays.asList(toggleButtonA, toggleButtonAn, toggleButtonThe, toggleButtonNone), toggleGroupArticle);
@@ -616,7 +616,7 @@ public class WordFormController implements Initializable {
   public void migrateReleaseWords() {
     final WordRepository wordRepository = wordController.getWordRepository();
     final LessonWordRepository lessonWordRepository = wordController.getLessonWordRepository();
-    final WordSoundRepository wordSoundRepository = wordController.getWordSoundRepository();
+    final DefinitionRepository definitionRepository = wordController.getDefinitionRepository();
     final LessonRepository lessonRepository = wordController.getLessonRepository();
 
     final ReleaseWordRepository releaseWordRepository = wordController.getReleaseWordRepository();
@@ -664,24 +664,24 @@ public class WordFormController implements Initializable {
           englishNames = englishNames.substring(englishNames.indexOf(" "));
         }
 
-        final List<WordSound> wordSounds = new ArrayList<>(wordSoundFromTerm(WordTypeEnum.WORD, englishNames, target.getSound()));
-        wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.COMPARATIVE, target.getComparative())));
-        wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SUPERLATIVE, target.getSuperlative())));
-        wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_TENSE, target.getPastTense())));
-        wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_PARTICIPLE, target.getPastParticiple())));
-        wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PLURAL, target.getPlural())));
-        wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SYNONYM, target.getSynonym())));
+        final List<Definition> definitions = new ArrayList<>(wordSoundFromTerm(WordTypeEnum.WORD, englishNames, target.getSound()));
+        definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.COMPARATIVE, target.getComparative())));
+        definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SUPERLATIVE, target.getSuperlative())));
+        definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_TENSE, target.getPastTense())));
+        definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_PARTICIPLE, target.getPastParticiple())));
+        definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PLURAL, target.getPlural())));
+        definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SYNONYM, target.getSynonym())));
         final List<ReleaseSentence> sentences = releaseSentenceRepository.findAllByWord_Id(target.getId());
         if (CollectionUtils.isNotEmpty(sentences)) {
-          final List<WordSound> wordSoundSentences = sentences.stream()
-                                                              .map(sentence -> WordSound.builder()
-                                                                                        .englishName(sentence.getEnSentence())
-                                                                                        .additionalInformation(sentence.getPlSentence())
-                                                                                        .britishSound(sentence.getSound())
-                                                                                        .type(WordTypeEnum.SENTENCE.toString())
-                                                                                        .build())
-                                                              .toList();
-          wordSounds.addAll(wordSoundSentences);
+          final List<Definition> definitionSentences = sentences.stream()
+                                                                .map(sentence -> Definition.builder()
+                                                                                           .englishName(sentence.getEnSentence())
+                                                                                           .additionalInformation(sentence.getPlSentence())
+                                                                                           .britishSound(sentence.getSound())
+                                                                                           .type(WordTypeEnum.SENTENCE.toString())
+                                                                                           .build())
+                                                                .toList();
+          definitions.addAll(definitionSentences);
         }
 
         final Word word = Word.builder()
@@ -691,7 +691,7 @@ public class WordFormController implements Initializable {
                               .article(target.getArticle())
                               .grammarType(target.getGrammarType())
                               .level(target.getLevel())
-                              .englishNames(wordSounds)
+                              .definitions(definitions)
                               .partOfSpeech("")
                               .build();
 
@@ -699,9 +699,9 @@ public class WordFormController implements Initializable {
         final Word savedWord = wordRepository.save(word);
 
 //        log.info("SAVING WORD_SOUNDS [{}]", wordSounds.size());
-        if (CollectionUtils.isNotEmpty(wordSounds)) {
-          wordSounds.forEach(wordSound -> wordSound.setWord(savedWord));
-          wordSoundRepository.saveAll(wordSounds);
+        if (CollectionUtils.isNotEmpty(definitions)) {
+          definitions.forEach(wordSound -> wordSound.setWord(savedWord));
+          definitionRepository.saveAll(definitions);
         }
         final LessonWord lessonWord = LessonWord.builder()
                                            .lesson(lessonRepository.findById(target.getLessonId()).get())
@@ -804,16 +804,16 @@ public class WordFormController implements Initializable {
       englishNames = englishNames.substring(englishNames.indexOf(" "));
     }
 
-    final List<WordSound> wordSounds = new ArrayList<>(wordSoundFromTerm(WordTypeEnum.WORD, englishNames));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.COMPARATIVE, releaseWord.getComparative())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SUPERLATIVE, releaseWord.getSuperlative())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_TENSE, releaseWord.getPastTense())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_PARTICIPLE, releaseWord.getPastParticiple())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PLURAL, releaseWord.getPlural())));
-    wordSounds.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SYNONYM, releaseWord.getSynonym())));
+    final List<Definition> definitions = new ArrayList<>(wordSoundFromTerm(WordTypeEnum.WORD, englishNames));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.COMPARATIVE, releaseWord.getComparative())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SUPERLATIVE, releaseWord.getSuperlative())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_TENSE, releaseWord.getPastTense())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PAST_PARTICIPLE, releaseWord.getPastParticiple())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.PLURAL, releaseWord.getPlural())));
+    definitions.addAll(new ArrayList<>(wordSoundFromTerm(WordTypeEnum.SYNONYM, releaseWord.getSynonym())));
 
     listViewLessons.setItems(null);
-    setWordForm(releaseWord.getPlName(), wordSounds);
+    setWordForm(releaseWord.getPlName(), definitions);
   }
 
   public void buttonCheckSoundsOnAction() {
@@ -824,10 +824,92 @@ public class WordFormController implements Initializable {
     final String dikiAme = "https://www.diki.pl/images-common/en-ame/mp3/";
 
     String sound = textFieldBritishSound.getText();
-    if (StringUtils.isNoneBlank(sound)) {
+
+    final ClipboardContent content = new ClipboardContent();
+    content.putString(sound);
+    Clipboard.getSystemClipboard().setContent(content);
+
+    checkSoundMultipleDefinitions(sound);
+
+    String englishSound = "";
+    String americanSound = "";
+    if (sound.contains("https://www.ldoceonline.com/media/english/ameProns")
+        || sound.contains("https://www.ldoceonline.com/media/english/breProns")) {
+
+      if (sound.contains(longmanBre)) {
+        englishSound = sound.substring(sound.indexOf(longmanBre));
+        englishSound = englishSound.substring(0, englishSound.indexOf("?"));
+      }
+      if (sound.contains(longmanAme)) {
+        americanSound = sound.substring(sound.indexOf(longmanAme));
+        americanSound = americanSound.substring(0, americanSound.indexOf("?"));
+      }
+    }
+    if (StringUtils.isNoneEmpty(americanSound)) {
+      textFieldAmericanSound.setText(americanSound);
+    } else if (StringUtils.isNoneBlank(sound)) {
+      final String expectedSound = sound.substring(sound.indexOf("=") + 1, sound.indexOf("]"));
+      checkSound(longmanAme + expectedSound, dikiAme + expectedSound, textFieldAmericanSound);
+    }
+    if (StringUtils.isNoneEmpty(englishSound)) {
+      textFieldBritishSound.setText(englishSound);
+    } else if (StringUtils.isNoneBlank(sound)) {
+      final String expectedSound = sound.substring(sound.indexOf("=") + 1, sound.indexOf("]"));
+      checkSound(longmanBre + expectedSound, dikiBre + expectedSound, textFieldBritishSound);
+    }
+    if (StringUtils.isNoneEmpty(textFieldAmericanSound.getText())
+        && StringUtils.isNoneEmpty(textFieldBritishSound.getText())
+        && textFieldBritishSound.getText().contains("[")
+        && textFieldBritishSound.getText().contains("]")
+        && textFieldBritishSound.getText().contains("=")) {
+      textFieldBritishSound.clear();
+    }
+
+/*    if (StringUtils.isNoneBlank(sound)) {
       sound = sound.substring(sound.indexOf("=") + 1, sound.indexOf("]"));
       checkSound(longmanBre + sound, dikiBre + sound, textFieldBritishSound);
       checkSound(longmanAme + sound, dikiAme + sound, textFieldAmericanSound);
+    }*/
+  }
+
+  private void checkSoundMultipleDefinitions(final String input) {
+    final List<Definition> definitions = listViewWordVariants.getItems().stream()
+                                                             .filter(definition -> !WordTypeEnum.WORD.toString().equals(definition.getType()))
+                                                             .filter(definition -> !WordTypeEnum.SENTENCE.toString().equals(definition.getType()))
+                                                             .toList();
+
+    if (CollectionUtils.isNotEmpty(definitions)) {
+      final List<String> sounds = Arrays.stream(input.split(";"))
+                                         .filter(StringUtils::isNoneBlank)
+                                         .map(StringUtils::trim)
+                                         .toList();
+
+      for (final String sound : sounds) {
+        definitions.stream()
+                   .filter(definition -> definition.getEnglishName().equals(sound.substring(sound.indexOf("[") + 1, sound.indexOf("="))))
+          .findFirst()
+          .ifPresent(definition -> {
+            if (StringUtils.isAllEmpty(definition.getBritishSound(), definition.getAmericanSound())) {
+              final String longmanAme = "https://www.ldoceonline.com/media/english/ameProns/";
+              final String longmanBre = "https://www.ldoceonline.com/media/english/breProns/";
+              final String dikiBre = "https://www.diki.pl/images-common/en/mp3/";
+              final String dikiAme = "https://www.diki.pl/images-common/en-ame/mp3/";
+
+              final String expectedSound = sound.substring(sound.indexOf("=") + 1, sound.indexOf("]"));
+
+              final String americanSound = checkSound(longmanAme + expectedSound, dikiAme + expectedSound);
+              final String britishSound = checkSound(longmanBre + expectedSound, dikiBre + expectedSound);
+
+              if (StringUtils.isNoneEmpty(americanSound)) {
+                definition.setAmericanSound(americanSound);
+              }
+              if (StringUtils.isNoneEmpty(britishSound)) {
+                definition.setBritishSound(britishSound);
+              }
+              wordController.getDefinitionService().save(definition);
+            }
+          });
+      }
     }
   }
 
@@ -843,4 +925,200 @@ public class WordFormController implements Initializable {
     }
   }
 
+  private String checkSound(final String url, final String backupUrl) {
+    final String finalUrl = SoundUtils.checkIfFileExists(url);
+    if (StringUtils.isNoneEmpty(finalUrl)) {
+      return finalUrl;
+    } else {
+      final String finalBackupUrl = SoundUtils.checkIfFileExists(backupUrl);
+      if (StringUtils.isNoneEmpty(finalBackupUrl)) {
+        return finalBackupUrl;
+      }
+    }
+    return "";
+  }
+
+  private String checkSound2(final String url, final String backupUrl) {
+//    final String finalUrl = SoundUtils.checkIfFileExists(url);
+//    if (StringUtils.isNoneEmpty(finalUrl)) {
+//      return finalUrl;
+//    } else {
+      final String finalBackupUrl = SoundUtils.checkIfFileExists(backupUrl);
+      if (StringUtils.isNoneEmpty(finalBackupUrl)) {
+        return finalBackupUrl;
+      }
+//    }
+    return "";
+  }
+
+  public void removeDuplicates() {
+    final WordService wordService = wordController.getWordService();
+    final LessonWordService lessonWordService = wordController.getLessonWordService();
+    final DefinitionService definitionService = wordController.getDefinitionService();
+    // 62, 9018, 17492
+/*    final List<Word> input = List.of(
+      wordService.getById(62L).get(),
+      wordService.getById(9018L).get(),
+      wordService.getById(17492L).get());*/
+
+
+    final Map<String, Map<String, List<Word>>> wordsGroupedByName =
+      wordService.getAll()
+//    input
+                 .stream()
+                 .collect(Collectors.groupingBy(Word::getPolishName,
+                                                Collectors.groupingBy(word -> word.getDefinitions()
+                                                                                  .stream()
+                                                                                  .filter(wordSound -> WordTypeEnum.WORD.toString().equals(wordSound.getType()))
+                                                                                  .map(Definition::getEnglishName)
+                                                                                  .findFirst()
+                                                                                  .orElse("")
+                                                                     )));
+
+    log.info("[REMOVE_DUPLICATES] FOUND [{}] group", wordsGroupedByName.size());
+
+    final List<Map<String, List<Word>>> duplicates = wordsGroupedByName.values()
+                                                                       .stream()
+                                                                       .filter(item -> item.values()
+                                                                                           .stream()
+                                                                                           .findFirst()
+                                                                                           .orElse(List.of())
+                                                                                           .size() > 1)
+                                                                       .toList();
+
+    log.info("[REMOVE_DUPLICATES] FOUND [{}] duplicates", duplicates.size());
+
+    final AtomicInteger index = new AtomicInteger(0);
+
+    for (Map<String, List<Word>> duplicate : duplicates) {
+
+      for (Map.Entry<String, List<Word>> entry : duplicate.entrySet()) {
+
+        final String key = entry.getKey();
+        log.info("[REMOVE_DUPLICATES] FIXING [{}] at index [{}]", key, index.getAndIncrement());
+        final List<Word> values = entry.getValue();
+
+        final List<Word> wordsToRemove = new ArrayList<>();
+        final Word firstWord = values.get(0);
+        values.remove(0);
+
+        for (Word word : values) {
+          for (LessonWord lessonWord : word.getLessonWords()) {
+            lessonWord.setWord(firstWord);
+            firstWord.getLessonWords().add(lessonWord);
+          }
+
+          for (Definition definition : word.getDefinitions()) {
+            if (firstWord.getDefinitions()
+                     .stream()
+              .filter(item -> item.getType().equals(definition.getType()))
+              .filter(item -> StringUtils.equals(item.getEnglishName(), definition.getEnglishName()))
+              .filter(item -> StringUtils.equals(item.getAdditionalInformation(), definition.getAdditionalInformation()))
+              .filter(item -> StringUtils.equals(item.getBritishSound(), definition.getBritishSound()))
+              .filter(item -> StringUtils.equals(item.getAmericanSound(), definition.getAmericanSound()))
+              .count() == 0) {
+              definition.setWord(firstWord);
+              firstWord.getDefinitions().add(definition);
+            }
+          }
+          wordsToRemove.add(word);
+        }
+        firstWord.getLessonWords().forEach(lessonWordService::save);
+        firstWord.getDefinitions().forEach(definitionService::save);
+        wordService.save(firstWord);
+
+        wordsToRemove.forEach(wordService::delete);
+      }
+    }
+  }
+
+  public void getLongmanSounds() {
+
+    // longmanScrapper.webScrap(englishTerm, forceTranslate)
+
+  }
+
+  public void checkSentences() {
+    final WordService wordService = wordController.getWordService();
+    final LessonWordService lessonWordService = wordController.getLessonWordService();
+    final DefinitionService definitionService = wordController.getDefinitionService();
+
+    final List<Word> words = wordService.getAll()
+                                        .stream()
+                                        .filter(word -> word.getDefinitions()
+                                                            .stream()
+                                                            .anyMatch(wordSound -> WordTypeEnum.SENTENCE.toString().equals(wordSound.getType())))
+                                        .toList();
+
+    for (final Word word : words) {
+      for (final Definition definition : word.getDefinitions()) {
+        log.info("CHECKING [{}]", definition);
+
+        if (WordTypeEnum.SENTENCE.toString().equals(definition.getType())) {
+          final String longmanAme = "https://www.ldoceonline.com/media/english/ameProns/";
+          final String longmanBre = "https://www.ldoceonline.com/media/english/breProns/";
+
+          final String dikiBre = "https://www.diki.pl/images-common/en/mp3/";
+          final String dikiAme = "https://www.diki.pl/images-common/en-ame/mp3/";
+
+          String sound = definition.getBritishSound();
+          if (StringUtils.isNoneBlank(sound) && sound.contains("=") && sound.contains("]")) {
+            sound = sound.substring(sound.indexOf("=") + 1, sound.indexOf("]"));
+            final String british = checkSound2(longmanBre + sound, dikiBre + sound);
+            final String american = checkSound2(longmanAme + sound, dikiAme + sound);
+            if (StringUtils.isNoneEmpty(british) || StringUtils.isNoneEmpty(american)) {
+              definition.setBritishSound(null);
+              definition.setAmericanSound(null);
+              if (StringUtils.isNoneEmpty(british)) {
+                definition.setBritishSound(british);
+              }
+              if (StringUtils.isNoneEmpty(american)) {
+                definition.setAmericanSound(american);
+              }
+              log.info("SAVING [{}]", wordService);
+              definitionService.save(definition);
+            }
+          }
+        }
+      }
+
+    }
+
+  }
+
+  @Override
+  public void run(final String... args) throws Exception {
+//    final List<Word> words = wordController.getWordService().getAll();
+//    for (final Word word : words) {
+//
+//      for (final Definition definition : word.getDefinitions().stream()
+//                                             .filter(definition -> WordTypeEnum.WORD.toString().equals(definition.getType()))
+//                                             .filter(definition -> definition.getBritishSound().contains("[")
+//                                                                   && definition.getBritishSound().contains("]")
+//                                                                   && definition.getBritishSound().contains("="))
+//                                             .toList()) {
+//        final List<Term> terms = longmanScrapper.webScrap(definition.getEnglishName(), true);
+//
+//        final List<String> sounds = new ArrayList<>();
+//        sounds.addAll(terms.stream()
+//                            .map(Term::getEnglishName)
+//                            .filter(text -> text.contains("www.ldoceonline.com") && text.contains(".mp3"))
+//                            .toList());
+//        sounds.addAll(terms.stream()
+//                            .map(Term::getAmericanName)
+//                            .filter(text -> text.contains("www.ldoceonline.com") && text.contains(".mp3"))
+//                            .toList());
+//        sounds.addAll(terms.stream()
+//                            .map(Term::getOtherName)
+//                            .filter(text -> text.contains("www.ldoceonline.com") && text.contains(".mp3"))
+//                            .toList());
+//
+//
+//
+//        definition.setBritishSound(definition.getBritishSound()
+//                                             .concat(String.join("; ", sounds)));
+//        wordController.getWordSoundService().save(definition);
+//      }
+//    }
+  }
 }
