@@ -1,25 +1,5 @@
 package rwilk.exploreenglish.controller.word.scrapper;
 
-import javafx.application.Platform;
-import javafx.fxml.FXMLLoader;
-import javafx.fxml.Initializable;
-import javafx.scene.control.ScrollPane;
-import javafx.scene.control.Tab;
-import javafx.scene.control.TabPane;
-import javafx.scene.layout.HBox;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.collections4.CollectionUtils;
-import org.springframework.boot.CommandLineRunner;
-import org.springframework.stereotype.Controller;
-import rwilk.exploreenglish.model.entity.Term;
-import rwilk.exploreenglish.scrapper.bab.BabScrapper;
-import rwilk.exploreenglish.scrapper.cambridge.CambridgeDictionaryScrapper;
-import rwilk.exploreenglish.scrapper.diki.DikiScrapper;
-import rwilk.exploreenglish.scrapper.longman.LongmanScrapper;
-import rwilk.exploreenglish.service.InjectService;
-import rwilk.exploreenglish.service.TermService;
-import rwilk.exploreenglish.utils.WordUtils;
-
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -28,7 +8,30 @@ import java.util.List;
 import java.util.Map;
 import java.util.ResourceBundle;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
+import java.util.regex.Pattern;
+
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.boot.CommandLineRunner;
+import org.springframework.stereotype.Controller;
+
+import lombok.extern.slf4j.Slf4j;
+
+import javafx.application.Platform;
+import javafx.fxml.FXMLLoader;
+import javafx.fxml.Initializable;
+import javafx.scene.control.ScrollPane;
+import javafx.scene.control.Tab;
+import javafx.scene.control.TabPane;
+import javafx.scene.layout.HBox;
+import rwilk.exploreenglish.model.entity.Term;
+import rwilk.exploreenglish.scrapper.bab.BabScrapper;
+import rwilk.exploreenglish.scrapper.cambridge.CambridgeDictionaryScrapper;
+import rwilk.exploreenglish.scrapper.diki.DikiScrapper;
+import rwilk.exploreenglish.scrapper.longman.LongmanScrapper;
+import rwilk.exploreenglish.service.InjectService;
+import rwilk.exploreenglish.service.TermService;
+import rwilk.exploreenglish.utils.WordUtils;
 
 @Slf4j
 @Controller
@@ -62,33 +65,45 @@ public class ScrapperController implements Initializable, CommandLineRunner {
 
   public void webScrap(final List<String> englishTerms, final boolean forceTranslate) {
     tabPaneScrapper.getTabs().clear();
-    CompletableFuture.supplyAsync(
-        () -> {
-          List<Term> terms = new ArrayList<>();
-          for (String englishTerm : englishTerms) {
-            englishTerm = WordUtils.trim(englishTerm);
 
-            if (CollectionUtils.isNotEmpty(cache.get(englishTerm))) {
-              terms.addAll(cache.get(englishTerm));
-            } else {
-              terms.addAll(dikiScrapper.webScrap(englishTerm, forceTranslate));
-              terms.addAll(babScrapper.webScrap(englishTerm, forceTranslate));
-              terms.addAll(cambridgeDictionaryScrapper.webScrap(englishTerm, forceTranslate));
-              terms.addAll(longmanScrapper.webScrap(englishTerm, forceTranslate));
+    new Thread(() -> {
+      final List<Term> terms = new ArrayList<>();
+      try {
+        terms.addAll(CompletableFuture.supplyAsync(
+          () -> {
+            final List<Term> translations = new ArrayList<>();
+            for (String englishTerm : englishTerms) {
+              englishTerm = WordUtils.trim(englishTerm);
 
-              if (cache.size() > 20) {
-                cache.clear();
+              if (CollectionUtils.isNotEmpty(cache.get(englishTerm)) && !forceTranslate) {
+                translations.addAll(cache.get(englishTerm));
+              } else {
+                translations.addAll(dikiScrapper.webScrap(englishTerm, forceTranslate));
+                translations.addAll(babScrapper.webScrap(englishTerm, forceTranslate));
+                translations.addAll(cambridgeDictionaryScrapper.webScrap(englishTerm, forceTranslate));
+                translations.addAll(longmanScrapper.webScrap(englishTerm.replaceAll(Pattern.quote("!"), ""), forceTranslate));
+
+                if (cache.size() > 20) {
+                  cache.clear();
+                }
+                cache.put(englishTerm, translations);
               }
-              cache.put(englishTerm, terms);
             }
-          }
-          return terms;
-        })
-        .thenAccept(this::createTab)
-        .exceptionally(ex -> {
+            return translations;
+          }).get());
+      } catch (Exception e) {
+        log.error("[webScrap]", e);
+      }
+
+      Platform.runLater(() -> {
+        if (CollectionUtils.isNotEmpty(terms)) {
+          createTab(terms);
+        } else {
           createEmptyTab("no records found");
-          return null;
-        });
+        }
+
+      });
+    }).start();
   }
 
   private void createTab(List<Term> terms) {
@@ -99,7 +114,9 @@ public class ScrapperController implements Initializable, CommandLineRunner {
     Platform.runLater(new Runnable() {
       @Override
       public void run() {
-        for (Term term : terms.stream().sorted(Comparator.comparing(term -> term.getEnglishName().length())).collect(Collectors.toList())) {
+        for (Term term : terms.stream()
+                              .filter(term -> StringUtils.isNoneEmpty(term.getEnglishName()))
+                              .sorted(Comparator.comparing(term -> term.getEnglishName().length())).toList()) {
           try {
             FXMLLoader fxmlLoader = new FXMLLoader();
             ScrollPane vBox = fxmlLoader.load(getClass().getResource("/scene/word/scrapper_tab.fxml").openStream());
